test/webgl/error/unterminated_comment_header.true
File 0, line 1, col 2:
unterminated comment

Fatal: unrecoverable preprocessor parse error (4)
